[metadata]
name = mypkg
version = 0.0.1
description = Awesome package.
url = https://github.com/akksobae/py_cmake_learn
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD License 2.0
license_files = LICENSE
author = Author
author_email = example@example.com
classifiers =
programming language :: Python :: 3
operating system :: Linux OS

[options]
install_requires =
